--- a/app/src/main/res/layout/app_bar_main_assessment.xml
+++ b/app/src/main/res/layout/app_bar_main_assessment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mainAssessment"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainCourse"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,20 +12,13 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/assesstoolbar"
+            android:id="@+id/assessmenttoolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/design_default_color_primary_dark"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <ListView
-            android:id="@+id/AssessListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white" />
-
     </android.support.design.widget.AppBarLayout>
-
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addAssessment"
@@ -34,5 +28,22 @@
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/design_default_color_primary_dark"
         app:srcCompat="@drawable/ic_menu_add" />
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/assessmentListView"
+            android:layout_width="match_parent"
+            android:layout_height="732dp"
+            android:layout_marginTop="55dp"
+            android:background="@android:color/white"
+            android:scrollbars="horizontal|vertical"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
