--- a/app/src/main/res/layout/app_bar_main_mentors.xml
+++ b/app/src/main/res/layout/app_bar_main_mentors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mainMentors"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainCourse"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,22 +18,32 @@
             android:background="@color/design_default_color_primary_dark"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <ListView
-            android:id="@+id/mentorListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" android:background="@android:color/white"
-            />
-
     </android.support.design.widget.AppBarLayout>
 
-
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/addMentors"
+        android:id="@+id/addMentor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/design_default_color_primary_dark"
         app:srcCompat="@drawable/ic_menu_add" />
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/mentorListView"
+            android:layout_width="match_parent"
+            android:layout_height="732dp"
+            android:layout_marginTop="55dp"
+            android:background="@android:color/white"
+            android:scrollbars="horizontal|vertical"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
